force-app/main/default/objects/stripeGC__Stripe_Connected_Account__c/stripeGC__Stripe_Connected_Account__c.object-meta.xml
<CustomObject>
    <label>Stripe Connected Account</label>
    <nameField>
        <label>Stripe Connected Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stripe Connected Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>