force-app/main/default/objects/stripeGC__Stripe_Connected_Account__c/fields/stripeGC__Is_Connected__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Is_Connected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Connected</label>
    <type>Checkbox</type>
</CustomField>