force-app/main/default/objects/stripeGC__Stripe_Connected_Account__c/fields/stripeGC__Stripe_Account__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Stripe_Account__c</fullName>
    <label>Stripe Account</label>
    <referenceTo>stripeGC__Stripe_Account__c</referenceTo>
    <relationshipLabel>Stripe Connected Accounts</relationshipLabel>
    <relationshipName>Stripe_Connected_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>