force-app/main/default/objects/stripeGC__Stripe_Connected_Account__c/fields/stripeGC__Stripe_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Stripe_Account_Id__c</fullName>
    <label>Stripe Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>